@@ -1,4 +1,4 @@
-$Id: History,v 1.21 2001-04-27 14:18:19 gcosmo Exp $
+$Id: History,v 1.22 2001-05-03 12:25:32 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 03, 2001  G. Cosmo                     geommng-V03-01-02
+- G4DrawVoxels.cc: migration to STL vector according to changes in
+  graphics_reps module (greps-V03-01-01), now migrated as well.
 
 April 27, 2001  G. Cosmo                   geommng-V03-01-01
 - G4LogicalVolume.cc, G4SmartVoxelHeader.cc: fixed compilation warnings
